k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insanity-cluster
  labels:
    name: insanity-cluster
    environment: production
